--- a/wener-sr/public/index.html
+++ b/wener-sr/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Wener Territory Sales Officer</title>
+  <title>Wener Sales Representative</title>
 </head>
 
 <body>
